--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,4 +50,17 @@ jobs:
       - name: Build image
         run: .github/workflows/build.sh jammy-rt-ros2
 
+  build-stanley:
+    needs: changes
+    runs-on: ubuntu-latest
+    if: ${{ needs.changes.outputs.check-changes == 'true' }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup build dependencies
+        run: .github/workflows/setup-dependencies.sh
+
+      - name: Build image
+        run: .github/workflows/build.sh jammy-rt-stan2
+
   # TODO: release image
