increase image size to 6G

--- a/image_builder/data/jammy-rt-humble/config.ini
+++ b/image_builder/data/jammy-rt-humble/config.ini
@@ -3,5 +3,9 @@
 [build]
 output_filename = ubuntu-22.04.1-rt-ros2-arm64+raspi.img
 
+# This is passed to truncate --size=<image_size> when operating against the
+# .img file
+image_size = 6G
+
 [env]
 ROS_DISTRO = humble
