--- a/image_builder/data/jammy-rt-humble-ruediger/rootfs/etc/systemd/system/druk.service
+++ b/image_builder/data/jammy-rt-humble-ruediger/rootfs/etc/systemd/system/druk.service
@@ -1,14 +1,14 @@
 [Unit]
-Description=Service to start Ruediger2
+Description=Service to start Druk
 After=syslog.target network.target
 [Service]
 LimitMEMLOCK=102400
 LimitMEMLOCKSoft=102400
 LimitRTPRIO=99
 LimitRTPRIOSoft=99
-ExecStart=/bin/bash /opt/ruediger2/scripts/ruediger2-control-start
+ExecStart=/bin/bash /opt/druk/scripts/druk-control-start
 Restart=on-failure
 RestartSec=10s
-User=ruediger
+User=druk
 [Install]
 WantedBy=multi-user.target
