--- a/image_builder/data/jammy-rt-humble-stanley/config.ini
+++ b/image_builder/data/jammy-rt-humble-stanley/config.ini
@@ -2,7 +2,7 @@
 # comprehensive example.
 [build]
 # The image url to download and customize.
-image_url = image_url = https://github.com/ros-realtime/ros-realtime-rpi4-image/releases/download/22.04.3_rt-ros2/ubuntu-22.04.3-v5.15.98-rt62-humble-arm64+raspi.img.xz
+image_url = https://github.com/ros-realtime/ros-realtime-rpi4-image/releases/download/22.04.4_rt-ros2/ubuntu-22.04.4-v5.15.98-rt62-humble-arm64+raspi.img.xz
 ; image_url = https://github.com/ros-realtime/ros-realtime-rpi4-image/releases/download/22.04.1_v5.15.39-rt42-raspi_ros2_humble/ubuntu-22.04.3-rt-ros2-arm64+raspi.img.xz
 
 # Mount location for the partitions in the image file downloaded.
